--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,122 +33,45 @@ jobs:
     - name: Start ngrok
       run: Start-Process -NoNewWindow -FilePath ".\ngrok.exe" -ArgumentList "tcp 3389"
       
-    - name: Get VDS Info from API
+    - name: Get VDS Info
       run: |
-        $maxRetries = 30
-        $retryCount = 0
-        $vdsUrl = $null
-        
-        # ngrok API endpoint
-        $apiUrl = "http://localhost:4040/api/tunnels"
-        
-        while ($retryCount -lt $maxRetries) {
+        Start-Sleep -Seconds 10
+        $vdsUrl = ""
+        for ($i = 0; $i -lt 20; $i++) {
           try {
-            $response = Invoke-WebRequest -Uri $apiUrl -UseBasicParsing -TimeoutSec 5 -ErrorAction Stop
-            $data = $response.Content | ConvertFrom-Json
-            
-            # Tunnel bulundu mu kontrol et
-            if ($data.tunnels -and $data.tunnels.Count -gt 0) {
-              $tunnel = $data.tunnels | Where-Object { $_.proto -eq "tcp" } | Select-Object -First 1
-              
-              if ($tunnel) {
-                $vdsUrl = $tunnel.public_url
-                Write-Host "✓ VDS Tunnel bulundu: $vdsUrl"
-                break
-              }
+            $api = Invoke-WebRequest -Uri "http://localhost:4040/api/tunnels" -UseBasicParsing
+            $json = $api.Content | ConvertFrom-Json
+            if ($json.tunnels[0]) {
+              $vdsUrl = $json.tunnels[0].public_url
+              break
             }
           } catch {
-            $retryCount++
-            Write-Host "⏳ Tunnel başlıyor... Deneme: $retryCount/$maxRetries"
-            Start-Sleep -Seconds 2
+            Start-Sleep -Seconds 1
           }
         }
+        if ($vdsUrl) {
+          $info = @"
+        ╔════════════════════════════════════════╗
+        ║       VDS BAGLANTI BILGILERI           ║
+        ╚════════════════════════════════════════╝
         
-        # Eğer URL bulunamadıysa hata ver
-        if (-not $vdsUrl) {
-          Write-Host "✗ HATA: VDS URL 60 saniye içinde alınamadı!"
+        VDS URL: $vdsUrl
+        Kullanici: runneradmin
+        Sifre: P@ssw0rd!
+        "@
+          $info | Out-File -FilePath "vds-info.txt" -Encoding UTF8
+          Get-Content vds-info.txt
+        } else {
+          Write-Host "ERROR: VDS URL alınamadı"
           exit 1
         }
-        
-        # URL'den bilgileri ayıkla
-        $urlPattern = $vdsUrl -replace "tcp://", ""
-        $hostPort = $urlPattern -split ":"
-        $host = $hostPort[0]
-        $port = if ($hostPort.Count -gt 1) { $hostPort[1] } else { "3389" }
-        
-        # VDS bilgilerini kaydet
-        $vdsInfo = @"
-╔════════════════════════════════════════╗
-║       VDS BAGLANTI BILGILERI           ║
-╚════════════════════════════════════════╝
-
-📅 Oluşturma Zamanı: $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')
-
-🌐 BAGLANTI ADRESLERI:
-   • Genel URL: $vdsUrl
-   • Host: $host
-   • Port: $port
-
-🖥️  SUNUCU BILGILERI:
-   • İşletim Sistemi: Windows Server
-   • RDP Servisi: Aktif
-   • Güvenlik: Etkin
-
-👤 GİRİŞ BİLGİLERİ:
-   • Kullanıcı Adı: runneradmin
-   • Şifre: P@ssw0rd!
-
-📋 BAGLANTI ADIMLARI:
-   1. RDP istemcisini aç (mstsc.exe)
-   2. Sunucu Adına yaz: $host:$port
-   3. Kullanıcı Adı: runneradmin
-   4. Şifre: P@ssw0rd! gir
-   5. Bağlan'a tıkla
-
-⚠️  ÖNEMLİ NOTLAR:
-   • Bu session sınırlı süre için aktiftir
-   • ngrok aracılığı ile bağlantı sağlanır
-   • Tüm veri şifreli iletilir
-"@
-        
-        # TXT formatında kaydet
-        $vdsInfo | Out-File -FilePath "vds-info.txt" -Encoding UTF8 -Force
-        
-        # JSON formatında kaydet
-        $jsonData = @{
-          url = $vdsUrl
-          host = $host
-          port = $port
-          username = "runneradmin"
-          password = "P@ssw0rd!"
-          timestamp = (Get-Date -Format 'yyyy-MM-dd HH:mm:ss')
-          status = "active"
-        } | ConvertTo-Json
-        
-        $jsonData | Out-File -FilePath "vds-info.json" -Encoding UTF8 -Force
-        
-        # Ekrana yazdır
-        Write-Host ""
-        Write-Host $vdsInfo
-        Write-Host ""
-        Write-Host "✓ VDS bilgileri başarıyla kaydedildi!"
       
-    - name: Display VDS Info
-      run: Get-Content vds-info.txt
-      
-    - name: Upload Info Artifacts
+    - name: Upload Info
       uses: actions/upload-artifact@v4
       with:
-        name: vds-connection-info
-        path: |
-          vds-info.txt
-          vds-info.json
+        name: vds-info
+        path: vds-info.txt
       if: always()
       
-    - name: Keep Session Alive
-      run: |
-        Write-Host ""
-        Write-Host "🟢 VDS Session başarıyla oluşturuldu!"
-        Write-Host "📥 Bağlantı bilgilerini 'Artifacts' bölümünden indirebilirsiniz."
-        Write-Host ""
-        Start-Sleep -Seconds 3600
+    - name: Keep Alive
+      run: Start-Sleep -Seconds 3600
